Added swagger documentation